// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package protos;

option java_package = "protos";
option java_multiple_files = true;

message NoFields {
}

message SingleInt {
  optional int32 int = 1;
}

message SingleLong {
  optional int64 long = 1;
}

message SingleRepeatedInt {
  repeated int32 int = 1;
}

message SingleRepeatedLong {
  repeated int64 long = 1;
}

message SingleMessage {
  optional NoFields msg = 1;
}

message SingleRepeatedMessage {
  repeated NoFields msg = 1;
}

message MessageWithExtensions {
  extensions 1000 to max;
}

extend MessageWithExtensions {
  optional int32 int_ext = 1000;
  repeated int32 repeated_int_ext = 1001;
}
